ui improvements. fixed dashboard button overlap. added empty placeholder for no PRs found. show/hide side menu. added missing icons. added loader for project create when scrolling.

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -150,7 +150,7 @@
             background-color: transparent;
             border: none;
             padding: 0 20px;
-            & i {
+            & i, fa-icon {
                 line-height: 50px;
                 font-size: 26px;
             }
